--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,3 @@
 <resources>
-    <string name="app_name" translatable="false">Homework</string>
-
-    <string name="default_notification_channel_id" translatable="false">qwerty</string>
-    <string name="default_notification_channel_name">Clock</string>
+    <string name="app_name">Homework</string>
 </resources>
