--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Homework</string>
+    <string name="channel_name">channel_1</string>
+    <string name="channel_description">song_channel</string>
 </resources>
