--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Homework</string>
+    <string name="search_hint">Search here</string>
+
+    <!-- Detail labels -->
+    <string name="label_temp">Temperature:</string>
+    <string name="label_humidity">Humidity:</string>
+    <string name="label_wind_direction">Wind\'s direction:</string>
+
+    <!-- Buttons -->
+    <string name="button_back_to_search">Back to search</string>
+
 </resources>
